--- a/rest-api-technotes/package.json
+++ b/rest-api-technotes/package.json
@@ -11,7 +11,13 @@
   "author": "vishal giri",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "date-fns": "^3.3.1",
+    "dotenv": "^16.4.2",
     "express": "^4.18.2",
-    "nodemon": "^3.0.3"
+    "mongoose": "^8.1.2",
+    "nodemon": "^3.0.3",
+    "uuid": "^9.0.1"
   }
 }
