--- a/rest-api-technotes/package.json
+++ b/rest-api-technotes/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.2",
     "express": "^4.18.2",
     "mongoose": "^8.1.2",
+    "mongoose-sequence": "^6.0.1",
     "nodemon": "^3.0.3",
     "uuid": "^9.0.1"
   }
